--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,10 @@
         <div class="col-sm-2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="file:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/index.html">About</a>
+                    <a class="nav-link" href="https:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/portfolio.html">Portfolio</a>
+                    <a class="nav-link" href="https:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
