--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="file:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/portfolio.html">Portfolio</a>
+                <a class="nav-link" href="https:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="file:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/contact.html">Contact</a>
+                <a class="nav-link" href="https:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/contact.html">Contact</a>
             </li>
         </ul>
     </div>
