--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,13 @@
     <div class="col-sm-2">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-            <a class="nav-link" href="file:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/index.html">About</a>
+            <a class="nav-link" href="https:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/index.html">About</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="#">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="file:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/contact.html">Contact</a>
+                <a class="nav-link" href="https:///Users/mtaylor/uw-sea-fsf-ft-08-2020-u-c/01-week/02-CSS-Bootstrap/02-Homework/contact.html">Contact</a>
             </li>
         </ul>
     </div>
